--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".list_jadwalseminar"
+            android:exported="false" />
+        <activity
+            android:name=".detail_seminar"
+            android:exported="false" />
+        <activity
             android:name=".list_jadwalsidang"
             android:exported="false" />
         <activity
