--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,16 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation platform('com.google.firebase:firebase-bom:31.1.0')
     implementation 'com.google.firebase:firebase-analytics'
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
+    implementation 'com.squareup.okhttp3.logging-interceptor:4.6.0'
+
+
+
+
+
 
     //sefza
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
